fix: h1 text clipping

--- a/Sass/_base.scss
+++ b/Sass/_base.scss
@@ -67,8 +67,10 @@ h1 {
         }
         
         h1 {
-            font-size: 1.5rem;
-            line-height: 1;
+            font-size: 1.6rem;
+            line-height: 1.2;
+            padding: 0.2rem 0;
+            margin: 0;
             background: $gradient-instagram;
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
